Graphe aire de mobilité brut

--- a/mainPage.html
+++ b/mainPage.html
@@ -10,7 +10,20 @@
 
 <body>
 
-	<h1 id = "headerID"> h1</h1>
+<defs>
+    <marker
+      id="arrow"
+      markerUnits="strokeWidth"
+      markerWidth="12"
+      markerHeight="12"
+      viewBox="0 0 12 12"
+      refX="6"
+      refY="6"
+      orient="auto">
+      <path d="M2,2 L10,6 L2,10 L6,6 L2,2" style="fill: #f00;"></path>
+    </marker>
+  </defs>
+
 	
 	<script src="scriptGraphique.js"></script>
 </body>
