--- a/mainPage.html
+++ b/mainPage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>TEST</title>
+	<title>TEST1</title>
 	<script src="d3.js"></script>
 	
 
