graphe bubble drag

--- a/mainPageBubble.html
+++ b/mainPageBubble.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>TEST1</title>
+	<title></title>
 	<script src="d3.js"></script>
 	
 
 </head>
 
 <body>
-	<h1>Graphe Bubble</h1>
+	
 	<canvas id="network" width="1000" height="1000"></canvas>
 
 	
