couleurs bulles + encadré info clique

--- a/mainPage.html
+++ b/mainPage.html
@@ -51,13 +51,18 @@ d3.json("\\TERTEST\\data.json",function(root){
       .style("fill", function(d) { return color((d.children ? d : d.parent).data.name); })
       .on("click", click)
 
-   
+
     .append("title")
       .text(function(d) { return d.data.name });
-
-
-
 });
+
+
+svg.append("text")
+    .attr("x", 0)
+    .attr("y", -320)
+    .attr("font-size", 50)
+    .text("trying to add text");
+
 
 
 function click(d) {
@@ -73,5 +78,6 @@ function click(d) {
       .attrTween("d", function(d) { return function() { return arc(d); }; });
 }
 
-d3.select(self.frameElement).style("height", height + "px");
+//d3.select(self.frameElement).style("height", height + "px");
+
 </script>
