--- a/grapheSunburst.html
+++ b/grapheSunburst.html
@@ -9,8 +9,8 @@ path {
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
 
-var width = 960,
-    height = 700,
+var width = 1000,
+    height = 1000,
     radius = (Math.min(width, height) / 2) - 10;
 
 var formatNumber = d3.format(",d");
@@ -35,37 +35,31 @@ var arc = d3.arc()
 var svg = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height)
-  .append("g")
+    .append("g")
     .attr("transform", "translate(" + width / 2 + "," + (height / 2) + ")");
 
 var root;
 
-d3.json("\\TERTEST\\data.json",function(root){
+d3.json("\\TER\\dataSunburst.json",function(root){
   
   root = d3.hierarchy(root);
   root.sum(function(d) { return d.size; });
   svg.selectAll("path")
       .data(partition(root).descendants())
-    .enter().append("path")
+      .enter().append("path")
       .attr("d", arc)
       .style("fill", function(d) { return color((d.children ? d : d.parent).data.name); })
-      .on("click", click)
+      .on("click", clique)
 
 
     .append("title")
       .text(function(d) { return d.data.name });
+  
 });
 
 
-svg.append("text")
-    .attr("x", 0)
-    .attr("y", -320)
-    .attr("font-size", 50)
-    .text("trying to add text");
 
-
-
-function click(d) {
+function clique(d) {
   svg.transition()
       .duration(750)
       .tween("scale", function() {
@@ -76,8 +70,8 @@ function click(d) {
       })
     .selectAll("path")
       .attrTween("d", function(d) { return function() { return arc(d); }; });
+          var arcText = d3.select(this.parentNode).select("text");
 }
 
-//d3.select(self.frameElement).style("height", height + "px");
 
 </script>
